--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <p>191186, Санкт-Петербург,<br>
             ул. Б. Конюшенная, д. 19/8</p>
           <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a class="button" href="">Напишите нам</a>
+          <a class="button open-modal-button" href="">Напишите нам</a>
         </div>
       </div>
 
@@ -218,7 +218,7 @@
     </button>
 
   </section>
-
+  <script src="js/script.js"></script>
 </body>
 
 </html>
