--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <ul class="site-navigation">
           <li><a class="page-active" href="">Студия</a></li>
-          <li><a href="">Клиенты</a></li>
+          <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
 
         <div class="user-navigation">
@@ -52,17 +52,17 @@
           <li class="slider-list-item slide slide-current" >
             <p class="slogan">Долго, дорого, скрупулезно.</p>
             <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-            <a href="blank.html" class="button">Узнать больше</a>
-          </li>
-          <li class="slider-list-item slide ">
-            <p class="slogan">Любим математику, как никто другой</p>
-            <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
-            <a href="blank.html" class="button">Узнать больше</a>
+            <a href="#" class="button">Узнать больше</a>
           </li>
           <li class="slider-list-item slide">
-            <p class="slogan">Только ночь,<br> только хардкор</p>
-            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-            <a href="blank.html" class="button">Узнать больше</a>
+            <p class="slogan">Любим математику как никто другой</p>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+            <a href="#" class="button">Узнать больше</a>
+          </li>
+          <li class="slider-list-item slide">
+            <p class="slogan">Только ночь, только хардкор</p>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a href="#" class="button">Узнать больше</a>
           </li>
 
         </ul>
@@ -72,6 +72,7 @@
           <button type="button" aria-label="Второй слайд"></button>
           <button type="button" aria-label="Третий слайд"></button>
         </div>
+
 
       </section>
 
@@ -143,11 +144,11 @@
       <ul class="partner-logo-list">
         <li class="logo-list-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img class="nohover"
               src="img/logo-1-1.svg" width="199" height="67" alt="Логотип сайта HTML Academy"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-2-1.png" width="209" height="90"
+        <li class="logo-list-item"><a href="#"><img class="nohover" src="img/logo-2-1.png" width="209" height="90"
               alt="Логотип сайта Barbershop Borodinski"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-3-1.png" width="185" height="52"
+        <li class="logo-list-item"><a href="#"><img class="nohover" src="img/logo-3-1.png" width="185" height="52"
               alt="Логотип сайта Pink "></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-4-1.png" width="173" height="84"
+        <li class="logo-list-item"><a href="#"><img class="nohover" src="img/logo-4-1.png" width="173" height="84"
               alt="Логотип сайта Mishka"></a></li>
       </ul>
 
@@ -161,6 +162,8 @@
 
     <section class="footer-write-us">
       <h2 class="visually-hidden">Как нас найти?</h2>
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1602694358145!5m2!1sru!2sru" width="100%" height="416" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
       <div class="contacts-container">
         <div class="contacts">
