Внес правки по замечаниям проверяющего наставника

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Дизайн-студия Нёрдс</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
@@ -42,9 +42,9 @@
                 <div class="scale">
                   <div class="bar" style="width: 70%; left: 0">
                   </div>
-                  <div class="toggle toggle-min" tabindex="0" style="left: 7%">
+                  <div class="toggle toggle-min" tabindex="0" style="left: 7%" aria-label="Левый ползунок">
                   </div>
-                  <div class="toggle toggle-max" tabindex="0" style="left: 62%">
+                  <div class="toggle toggle-max" tabindex="0" style="left: 62%" aria-label="Правый ползунок">
                   </div>
                 </div>
               </div>
@@ -140,8 +140,8 @@
               <div class="price">
                 <a href="productcard.html" class="modal-link" aria-label="Переход к описанию товара">Sedona</a>
                 <p>Информационный сайт<br> для туристов</p>
-                <button type="button" aria-label="Добавить в корзину сайт Sedona">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт Sedona">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра главной страницы сайта SEDONA">
             </li>
@@ -157,8 +157,8 @@
               <div class="price">
                 <a href="productcard.html" class="modal-link" aria-label="Переход к описанию товара">Pink APP</a>
                 <p>Продуктовый лендинг приложения для iOS и Android</p>
-                <button type="button" aria-label="Добавить в корзину сайт PINK APP">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт PINK APP">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-pink-1.jpg" width="359" height="578" alt="Миниатюра главной страницы сайта PINK">
             </li>
@@ -174,8 +174,8 @@
               <div class="price">
                 <a href="productcard.html" class="modal-link" aria-label="Переход к описанию товара">Barbershop</a>
                 <p>Сайт салона красоты.<br>Для мужчин, да.</p>
-                <button type="button" aria-label="Добавить в корзину сайт Barbershop">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт Barbershop">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-barbershop-1.jpg" width="358" height="578"
                 alt="Миниатюра главной страницы сайта Barbershop">
@@ -192,8 +192,8 @@
               <div class="price">
                 <a href="productcard.html" class="modal-link" aria-label="Переход к описанию товара">Mishka</a>
                 <p>Интернет-магазин<br>вязаных игрушек</p>
-                <button type="button" aria-label="Добавить в корзину сайт Mishka">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт Mishka">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-mishka-1.jpg" width="359" height="578" alt="Миниатюра главной страницы сайта MISHKA">
             </li>
@@ -209,8 +209,8 @@
               <div class="price">
                 <a href="productcard.html" class="modal-link" aria-label="Переход к описанию товара">A plus</a>
                 <p>Лендинг курсов повышения квалификации</p>
-                <button type="button" aria-label="Добавить в корзину сайт A plus">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт A plus">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-aplus-1.jpg" width="359" height="578" alt="Миниатюра главной страницы сайта A plus">
             </li>
@@ -226,8 +226,8 @@
               <div class="price">
                 <a href="product.card" class="modal-link" aria-label="Переход к описанию товара">Кваст</a>
                 <p>Промо-сайт производителя крафтового пива</p>
-                <button type="button" aria-label="Добавить в корзину сайт Кваст">9 900
-                  <span>&#8381;</span></button>
+                <a class="button price-button" href="" aria-label="Добавить в корзину сайт Кваст">9 900
+                  <span>&#8381;</span></a>
               </div>
               <img src="img/img-kvast-1.jpg" width="359" height="578" alt="Миниатюра главной страницы сайта KVAST">
             </li>
@@ -290,8 +290,8 @@
       </form>
       <button class="button modal-close" type="button" aria-label="Закрыть окно">
       </button>
-    </section>
-      <script src="js/sript.min.js"></script>
-  </footer>    
+    </section>  
+  </footer>  
+  <script src="js/sript.min.js"></script>  
 </body>
 </html>
