--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Дизайн-студия Нёрдс</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body">
@@ -90,7 +90,7 @@
         </ul>
       </div>
       <div class="about-us-right-column">
-        <img src="img/nerds-illustration-1.png" width="360" height="208" alt="">
+        <img src="img/nerds-illustration-1.png" width="360" height="208" alt="Большой логотип студии Nerd's">
         <p>с 2004 года любим точность во всем:</p>
         <table class="features-table">
           <tr>
